<resources>
    <string name="app_name">OuRx</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OuRx</string>
    <string name="nav_header_subtitle">UIMA Team L</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_medication">Add</string>
    <string name="nav_menu_cabinet">Medicine Cabinet</string>
    <string name="nav_menu_find">Find Medication</string>
    <string name="nav_menu_schedule">Schedule</string>
    <string name="nav_menu_map">Pharmacy Map</string>
    <string name="activity_medicine_cabinet">Medicine Cabinet</string>
    <string name="activity_find_medication">Find Medication</string>
    <string name="activity_medication_schedule">Medication Schedule</string>
    <string name="activity_pharmacy_map">Pharmacy Map</string>
    <string name="notifications_switch_title">Enable Notifications</string>
    <string name="notifications_switch_summary">Turn notifications on or off for all medication reminders</string>
    <string name="add_dosage">Dosage</string>
    <string name="add_food">Take with Food</string>
    <string name="add_water">Take with Water</string>
    <string name="add_frequency">Frequency</string>
    <string name="add_reminder">Remind me on:</string>
    <string name="add_special_instructions">Special Instructions:</string>
    <string name="add_enter_instructions">Enter Instructions</string>
    <string name="add_enter_dosage">Enter Dosage</string>
    <string name="add_medication">Add Medication</string>
    <string name="past_button">Past</string>
    <string name="upcoming_button">Upcoming</string>
    <string name="med_info">Medication Info</string>

    <string-array name="unit_options">
        <item>Pill</item>
        <item>Drop</item>
        <item>mL</item>
        <item>mg</item>
    </string-array>

    <string-array name="hours">
        <item>12 am</item>
        <item>1 am</item>
        <item>2 am</item>
        <item>3 am</item>
        <item>4 am</item>
        <item>5 am</item>
        <item>6 am</item>
        <item>7 am</item>
        <item>8 am</item>
        <item>9 am</item>
        <item>10 am</item>
        <item>11 am</item>
        <item>12 pm</item>
        <item>1 pm</item>
        <item>2 pm</item>
        <item>3 pm</item>
        <item>4 pm</item>
        <item>5 pm</item>
        <item>6 pm</item>
        <item>7 pm</item>
        <item>8 pm</item>
        <item>9 pm</item>
        <item>10 pm</item>
        <item>11 pm</item>
    </string-array>

    <string-array name="medications">
        <item>Acetaminophen</item>
        <item>Adderall</item>
        <item>Alprazolam</item>
        <item>Amitriptyline</item>
        <item>Amlodipine</item>
        <item>Amoxicillin</item>
        <item>Ativan</item>
        <item>Atorvastatin</item>
        <item>Azithromycin</item>
        <item>Ciprofloxacin</item>
        <item>Citalopram</item>
        <item>Clindamycin</item>
        <item>Clonazepam</item>
        <item>Codeine</item>
        <item>Cyclobenzaprine</item>
        <item>Cymbalta</item>
        <item>Doxycycline</item>
        <item>Gabapentin</item>
        <item>Hydrochlorothiazide</item>
        <item>Ibuprofen</item>
        <item>Lexapro</item>
        <item>Lisinopril</item>
        <item>Loratadine</item>
        <item>Lorazepam</item>
        <item>Losartan</item>
        <item>Lyrica</item>
        <item>Meloxicam</item>
        <item>Metformin</item>
        <item>Metoprolol</item>
        <item>Naproxen</item>
        <item>Omeprazole</item>
        <item>Oxycodone</item>
        <item>Pantoprazole</item>
        <item>Prednisone</item>
        <item>Tramadol</item>
        <item>Trazodone</item>
        <item>Viagra</item>
        <item>Wellbutrin</item>
        <item>Xanax</item>
        <item>Zoloft</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="activity_settings">Settings</string>
    <string name="activity_add_medication">Add</string>
    <string name="password_switch_title">Require Password on Start</string>
    <string name="location_switch_title">Location Services</string>
    <string name="night_switch_title">Night Mode</string>
    <string name="password_switch_summary">Require a password when the app is first started</string>
    <string name="location_switch_summary">Allow this app to determine your location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_med_button">Add Medication</string>
    <string name="medication_name_default">Name</string>
    <string name="change_medication_button">Change Medication</string>
    <string name="action_edit">Edit Medication</string>
</resources>
